# hwm93

./: .appveyor.yml  .coveragerc  .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile.f2py  README.md  README.rst  RunHWM93.py  demo_hwm93.py  hwm93.m  hwm93_driver.for  hwm93_sub.for  meson.build  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
fortran/: CMakeLists.txt
hwm93/: __init__.py  plots.py
pyhwm93/: __init__.py  plots.py  runhwm93.py
src/: hwm93_driver.f  hwm93_sub.f
test/: test.py
tests/: test.py  test_all.py  test_script.py
