[metadata]
name = pyhwm93
version = 0.9.0
author = Michael Hirsch, Ph.D.
description = Horizontal Wind Model 1993 in Python
url = https://github.com/scivision/pyhwm93
keywords =
  mesosphere
  stratosphere
  thermosphere
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Fortran
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Topic :: Scientific/Engineering :: Atmospheric Science
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
setup_requires = 
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  xarray
  sciencedates

[options.extras_require]
tests = 
  pytest
  pytest-cov
  coveralls
  flake8
  mypy
plot =
  matplotlib
  seaborn

[options.entry_points]
console_scripts = 
  RunHWM93 = RunHWM93:main

[flake8]
max-line-length = 132
exclude = .git,__pycache__,.eggs/,doc/,docs/,build/,dist/,archive/

[coverage:run]
cover_pylib = false
omit =
  /home/travis/virtualenv/*
  */site-packages/*
  */bin/*
  */sciencedates/*

[coverage:report]
exclude_lines =
  pragma: no cover
  def __repr__
  RuntimeError
  NotImplementedError
  ImportError
  KeyError
  FileNotFoundError
  CalledProcessError
  logging.warning
  ValueError
  TypeError
